fixed line in mediator case 2